Week two day one stuff

--- a/week-01/day-5/cv.html
+++ b/week-01/day-5/cv.html
@@ -1,79 +1,80 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
   <title>Curriculum vitae</title>
   <link rel="stylesheet" type="text/css" href="cv.css">
   <meta charset="utf-8">
-  </head>
+</head>
+<!-- end of head -->
 
-  <body>
-    <div id="header">
-      <br>
-      <p>Hello</p>
-        <p>My name is</p>
-        <p id="name"> Zsófia Németh</p>
-    </div>
-
+<body>
+  <div id="header">
     <br>
-
-    <div class="info">
-        <h2>PERSONAL DETAILS</h2>
-
-            <p>Birth: 3 November, 1984<br>
-            Address: 11 Beethoven St, Budapest, Hungary<br>
-            Phone: (003670)234-3909<br>
-            Email: zsofinnemeth@gmail.com</p>
-
+    <p>Hello</p>
+    <p>My name is</p>
+    <p id="name"> Zsófia Németh</p>
   </div>
+<!--  the box with my info --->
+  <br>
 
-        <p class="els">"Knowing is not enough; we must apply. Willing is not enough; we must do."</p>
+  <div class="info">
+    <h2>PERSONAL DETAILS</h2>
+
+    <p>Birth: 3 November, 1984<br>
+      Address: 11 Beethoven St, Budapest, Hungary<br>
+      Phone: (003670)234-3909<br>
+      Email: zsofinnemeth@gmail.com</p>
+
+    </div>
+<!--  the quote comin -->
+    <p class="els">"Knowing is not enough; we must apply. Willing is not enough; we must do."</p>
     <br>
-
+<!--  lists --->
     <div id="torzs">
       <br>
-                  <div>
-                      <h2>EXPERIENCE</h2>
-                      <ul>
-                <li><strong>Postcard Specialist</strong> (2009-2016)<br>
-                Darabanth Auction House, Budapest, Full-time<br></li>
-                <br>
-                <li><strong>Hostel Receptionist</strong> (2007-2008)<br>
-                Broadway Hostel, Budapest , Part-time<br>
-                checking in / out guests, management of bookings, general maintenance of the hostel</li>
+      <div>
+        <h2>EXPERIENCE</h2>
+        <ul>
+          <li><strong>Postcard Specialist</strong> (2009-2016)<br>
+            Darabanth Auction House, Budapest, Full-time<br></li>
+            <br>
+            <li><strong>Hostel Receptionist</strong> (2007-2008)<br>
+              Broadway Hostel, Budapest , Part-time<br>
+              checking in / out guests, management of bookings, general maintenance of the hostel</li>
 
-                  </div>
+            </div>
 
-                  <div>
-                        <h2>FORMAL EDUCATION</h2>
+            <div>
+              <h2>FORMAL EDUCATION</h2>
 
-                          <ul>
+              <ul>
 
                 <li><strong>Green Fox Academy</strong> 2016-2017</li>
                 <br>
                 <li><strong>MA in English Language and Literary Studies</strong> 2003-2009<br>
+                  Károli Gáspár University of the Reformed Church, Budapest</li><br>
+                  <li><strong>MA in Hungarian Linguistics and Literature</strong> 2003-2009<br>
                     Károli Gáspár University of the Reformed Church, Budapest</li><br>
-                <li><strong>MA in Hungarian Linguistics and Literature</strong> 2003-2009<br>
-                    Károli Gáspár University of the Reformed Church, Budapest</li><br>
-                <li><strong>Central European Studies (one semester, CEEPUS Scholarship program)</strong> 2008 <br>
-                    Univerzita Karlova Filozoficka Fakulta, Praha</li>
+                    <li><strong>Central European Studies (one semester, CEEPUS Scholarship program)</strong> 2008 <br>
+                      Univerzita Karlova Filozoficka Fakulta, Praha</li>
+
+                    </div>
+
+                    <div>
+
+                      <h2>LANGUAGE SKILLS</h2>
+                      <ul>
+                        <li>Hungarian (native)</li>
+                        <li>English (near native / fluent)</li>
+                        <li>German (good working knowledge B1/B2 – in progress)</li>
+                        <li>Czech (basic communication skills A1)</li>
+                      </ul>
+                    </div>
+                    <br>
 
                   </div>
 
-                  <div>
+                </body>
 
-                        <h2>LANGUAGE SKILLS</h2>
-                          <ul>
-                            <li>Hungarian (native)</li>
-                            <li>English (near native / fluent)</li>
-                            <li>German (good working knowledge B1/B2 – in progress)</li>
-                            <li>Czech (basic communication skills A1)</li>
-                          </ul>
-                  </div>
-            <br>
-
-      </div>
-
-</body>
-
-</html>
+                </html>
