--- a/week-02/day-1/problem4/problem4.html
+++ b/week-02/day-1/problem4/problem4.html
@@ -1,21 +1,32 @@
-.columns {
-  width: 300px;
-  padding: 10px;
-  margin: 10px;
-}
+<!DOCTYPE html>
+<html>
 
-p {
-  text-align: justify;
-  border-bottom: 2px solid black;
-  padding: 10px;
-}
+<head>
+  <title>Problem four</title>
+  <link rel="stylesheet" type="text/css" href="problem4.css">
+  <meta charset="utf-8">
+</head>
 
-img{
-  float: left;
-  padding: 10px;
+<body>
 
-}
+  <div class="columns">
 
-#ketteske {
-  float: right;
-}
+    <p><img src="duck.png" alt="duck"/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac tempus tortor. Suspendisse venenatis, ipsum at convallis dignissim, nibh nibh semper ipsum, non porta ligula felis id dui. Praesent ac augue ullamcorper, gravida libero sed, maximus massa. Morbi hendrerit augue eu bibendum luctus. Sed semper volutpat libero vel varius. Suspendisse ac leo rutrum, blandit augue eu, viverra velit.</p>
+
+    <p><img id="ketteske" src="duck.png" alt="duck">Sed semper massa ante, id ullamcorper diam condimentum in. Pellentesque quis diam quis lorem ultricies rhoncus at non nisl. Mauris in imperdiet arcu. Sed semper volutpat libero vel varius. Suspendisse ac leo rutrum, blandit augue eu, viverra velit. Sed semper massa ante, id ullamcorper diam condimentum in. Pellentesque quis diam quis lorem ultricies rhoncus at non nisl. Mauris in imperdiet arcu. </p>
+
+
+  </div>
+
+  <div class="message">
+    <p class="x">x</p>
+    <p class="line1">Wow!</p>
+    <p class="line2">Something happened</p>
+    <div class="buttons"><p class="inline">ok</p>
+    <p class="inline">cancel</p></div>
+  </div>
+
+
+</body>
+
+</html>
